5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1675_2471.log
== SUBMITION (2019-05-01 21:01:53) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
	elif(a<45 and b<22):
		print("Risco: Baixo")
	elif(a>=45 and b<22):
		print("Risco: Medio")
	elif(a<45 and b>=22):
		print("Risco: Medio")
	elif(a>=45 and b>=22):
		print("Risco: Alto")
-- EXECUTION TIME:
0.256687
-- ERROR:
  File "/home/codebench/codes/1675/2471/main.py", line 6
    elif(a<45 and b<22):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:02:06) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
	elif(a<45 and b<22):
		print("Risco: Baixo")
	elif(a>=45 and b<22):
		print("Risco: Medio")
	elif(a<45 and b>=22):
		print("Risco: Medio")
	elif(a>=45 and b>=22):
		print("Risco: Alto")
-- ERROR:
File "XXXX", line 6
    elif(a<45 and b<22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:02:50) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
	elif((a<45) and (b<22)):
		print("Risco: Baixo")
	elif(a>=45 and b<22):
		print("Risco: Medio")
	elif(a<45 and b>=22):
		print("Risco: Medio")
	elif(a>=45 and b>=22):
		print("Risco: Alto")
-- ERROR:
File "XXXX", line 6
    elif((a<45) and (b<22)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:03:13) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
	elif(a<45) and (b<22):
		print("Risco: Baixo")
	elif(a>=45 and b<22):
		print("Risco: Medio")
	elif(a<45 and b>=22):
		print("Risco: Medio")
	elif(a>=45 and b>=22):
		print("Risco: Alto")
-- ERROR:
File "XXXX", line 6
    elif(a<45) and (b<22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:03:37) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:03:41) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.12544
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:03:48) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:04:30) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.176023
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:04:32) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:04:49) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:05:05) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.1681
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:05:25) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.190905
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:05:40) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 and a>130 and b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:06:16) 
-- CODE:
a= int(input("idade: "))
b= float(input("imc: "))
print("Entradas: ", a, "anos","e", "IMC", b)
if(a<=0 or a>130 or b<=0):
	print("Dados invalidos")
elif(a<45) and (b<22):
	print("Risco: Baixo")
elif(a>=45 and b<22):
	print("Risco: Medio")
elif(a<45 and b>=22):
	print("Risco: Medio")
elif(a>=45 and b>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.116189
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
